panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__typedef__test_redeclaration_with_same_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/typedef/test_redeclaration_with_same_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_redeclaration_with_same_type.c"
   (typedef in_global_scope `long`)
   (typedef in_global_scope `long`)
   (function-definition external stack-size=8
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (typedef in_local_scope `int`)
         (typedef in_local_scope `int`))))

----- stderr -----
