panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__typedef__test_shadow_typedef_in_inner_scope_with_function_pointer_value.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_with_function_pointer_value.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_shadow_typedef_in_inner_scope_with_function_pointer_value.c"
   (typedef name `int`)
   (function-definition external stack-size=24
      (f~0 `fn(name: int) -> int` (static f))
      (params
         (name~1 `int` @0))
      (compound-statement
         (return
            (multiply `int` @4
               (name~1 `int` @0)
               (2 `int` @8)))))
   (function-definition external stack-size=24
      (main~2 `fn() -> int` (static main))
      (compound-statement
         (definition (name~3 `ptr<fn(∅: int) -> int>` @0)
            (addressof `ptr<fn(name: int) -> int>` @0
               (f~0 `fn(name: int) -> int` (static f))))
         (return
            (call `int` @8 (name~3 `ptr<fn(∅: int) -> int>` @0)
               (21 `int` @12))))))

----- stderr -----
