panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__typedef__test_typedef_array_decay.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/typedef/test_typedef_array_decay.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_typedef_array_decay.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (typedef i32 `int`)
   (typedef array_with_length `array<int; 42>`)
   (typedef array_with_unknown_length `array<int; ∅>`)
   (typedef pointer `ptr<int>`)
   (function-definition external stack-size=56
      (check_pointer_decay_of_typedefd_arrays~1 `fn(xs: ptr<int>) -> void` (static check_pointer_decay_of_typedefd_arrays))
      (params
         (xs~3 `ptr<int>` @0))
      (compound-statement
         (expression
            (call `int` @8
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 5>>` @24
                        (string `array<char; 5>` @void "%zu\n\0"))))
               (8 `unsigned long` @32)))
         (expression (0 `int` @8))
         (expression (0 `int` @8))
         (expression (0 `int` @8))))
   (function-definition external stack-size=56
      (check_pointer_decay_of_typedefd_arrays_with_unknown_length~4 `fn(xs: ptr<int>) -> void` (static check_pointer_decay_of_typedefd_arrays_with_unknown_length))
      (params
         (xs~6 `ptr<int>` @0))
      (compound-statement
         (expression
            (call `int` @8
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 5>>` @24
                        (string `array<char; 5>` @void "%zu\n\0"))))
               (8 `unsigned long` @32)))
         (expression (0 `int` @8))
         (expression (0 `int` @8))
         (expression (0 `int` @8))))
   (function-definition external stack-size=88
      (main~7 `fn(∅: int, ∅: ptr<ptr<char>>) -> int` (static main))
      (params
         (main.unnamed_parameter.0~9 `int` @0)
         (main.unnamed_parameter.1~10 `ptr<ptr<char>>` @8))
      (compound-statement
         (definition (a~11 `array<int; 3>` @16)
            (braced
               (subobject +0 (1 `int` @16))
               (subobject +4 (2 `int` @20))
               (subobject +8 (3 `int` @24))))
         (definition (b~12 `array<int; 4>` @28)
            (braced
               (subobject +0 (1 `int` @28))
               (subobject +4 (2 `int` @32))
               (subobject +8 (3 `int` @36))
               (subobject +12 (4 `int` @40))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(xs: ptr<int>) -> void>` @48
                  (check_pointer_decay_of_typedefd_arrays~1 `fn(xs: ptr<int>) -> void` (static check_pointer_decay_of_typedefd_arrays)))
               (noop-type-conversion `ptr<int>` @56
                  (addressof `ptr<array<int; 3>>` @56
                     (a~11 `array<int; 3>` @16)))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(xs: ptr<int>) -> void>` @48
                  (check_pointer_decay_of_typedefd_arrays~1 `fn(xs: ptr<int>) -> void` (static check_pointer_decay_of_typedefd_arrays)))
               (noop-type-conversion `ptr<int>` @56
                  (addressof `ptr<array<int; 4>>` @56
                     (b~12 `array<int; 4>` @28)))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(xs: ptr<int>) -> void>` @48
                  (check_pointer_decay_of_typedefd_arrays_with_unknown_length~4 `fn(xs: ptr<int>) -> void` (static check_pointer_decay_of_typedefd_arrays_with_unknown_length)))
               (noop-type-conversion `ptr<int>` @56
                  (addressof `ptr<array<int; 3>>` @56
                     (a~11 `array<int; 3>` @16)))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(xs: ptr<int>) -> void>` @48
                  (check_pointer_decay_of_typedefd_arrays_with_unknown_length~4 `fn(xs: ptr<int>) -> void` (static check_pointer_decay_of_typedefd_arrays_with_unknown_length)))
               (noop-type-conversion `ptr<int>` @56
                  (addressof `ptr<array<int; 4>>` @56
                     (b~12 `array<int; 4>` @28)))))
         (expression
            (call `int` @44
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @48
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @56
                  (noop-type-conversion `ptr<char>` @56
                     (addressof `ptr<array<char; 9>>` @56
                        (string `array<char; 9>` @void "%zu %zu\n\0"))))
               (3 `unsigned long` @64)
               (4 `unsigned long` @72))))))

----- stderr -----
