panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__typedef__test_use_globally_typedefd_name_as_parameter_name_and_use_typedef.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/typedef/test_use_globally_typedefd_name_as_parameter_name_and_use_typedef.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_use_globally_typedefd_name_as_parameter_name_and_use_typedef.c"
   (typedef a `int`)
   (function-definition external stack-size=24
      (f~0 `fn(a: int) -> int` (static f))
      (params
         (a~2 `int` @0))
      (compound-statement
         (return (a~2 `int` @0))))
   (definition external (global_value~3 `int` (static global_value)) (42 `int`))
   (function-definition external stack-size=24
      (main~4 `fn() -> int` (static main))
      (compound-statement
         (return
            (call `int` @0
               (addressof `ptr<fn(a: int) -> int>` @8
                  (f~0 `fn(a: int) -> int` (static f)))
               (global_value~3 `int` (static global_value)))))))

----- stderr -----
